--- a/1. 이진탐색.md
+++ b/1. 이진탐색.md
@@ -3,20 +3,16 @@
 
 ```javascript
 function binarySearch(arr, item) {
-    let low = 0;
+  let low = 0;
   let high = arr.length - 1;
   
   while ( low <= high ) {
     const mid = Math.floor((low + high) / 2);
     const guess = arr[mid];
     
-    if ( guess === item ) {
-      return mid;
-    } else if ( guess > item ) {
-      high = mid - 1;
-    } else {
-      low = mid + 1;
-    }
+    if ( guess === item ) return mid;
+    else if ( guess > item ) high = mid - 1;
+    else low = mid + 1;
   }
   
   return null;
@@ -24,6 +20,6 @@ function binarySearch(arr, item) {
 
 const myArr = [1, 3, 5, 7, 9];
 
-console.log(binarySearch(myArr, 9)); // => 1
+console.log(binarySearch(myArr, 9)); // => 4
 console.log(binarySearch(myArr, -1)); // => null
 ```
