--- a/3. 재귀.md
+++ b/3. 재귀.md
@@ -5,20 +5,18 @@
 ```javascript
 function lookForKey(mainBox){
   let pile = [];
-  for(const item of mainBox){
-    pile.push(item);
+  for (const item of mainBox) {
+     pile.push(item);
   }
   
-  while(pile.length !== 0){
-    const box = pile.pop();
-    for(const item of box){
-      if(item === 'key'){
-        console.log("열쇠를 찾았어요!");
-        break;
-      }
-      if(item.constructor === Array){
-        pile.push(item);
-      }
+  while (pile.length !== 0) {
+     const box = pile.pop();
+     for (const item of box) {
+       if (item === 'key') {
+         console.log("열쇠를 찾았어요!");
+         break;
+       }
+       if (item.constructor === Array) pile.push(item);
     }
   }
 }
@@ -31,14 +29,12 @@ console.log(lookForKey([[[],'key'],[]]))
 ### 재귀
 ```javascript
 function lookForKey(box){
-  for(const item of box){
-    if(item === 'key'){
-      console.log("열쇠를 찾았어요!");
-      break;
-    }
-    if(item.constructor === Array){
-      lookForKey(item)
-    }
+  for (const item of box) {
+     if (item === 'key') {
+       console.log("열쇠를 찾았어요!");
+       break;
+     }
+     if (item.constructor === Array) lookForKey(item);
   }
 }
 
@@ -52,7 +48,7 @@ console.log(lookForKey([[[],'key'],[]]))
 function countdown(i){
   console.log(i);
   // 기본 단계 (없으면 무한 반복된)
-  if(i <= 1) return;
+  if (i <= 1) return;
   // 재귀 단계
   countdown(i-1); 
 }
@@ -65,7 +61,7 @@ countdown(3);
 ### 팩토리얼!
 ```javascript
 function fact(x){
-  if(x === 1) return 1;
+  if (x === 1) return 1;
   return x * fact(x-1);
 }
 
