--- a/4. 퀵 정렬.md
+++ b/4. 퀵 정렬.md
@@ -4,20 +4,18 @@
 ### 반복문
 ```javascript
 function quicksort(array) {
-  if (array.length < 2) {
-    return array;
-  } else {
-    const pivot = array[0];
-    const less = [];
-    const greater = [];
+  if (array.length < 2) return array;
+  
+  const pivot = array[0];
+  const less = [];
+  const greater = [];
     
-    for (let i = 1; i < array.length; i++) {
-      if (array[i] <= pivot) less.push(array[i]);
-      else greater.push(array[i]);
-    }
-    
-    return [...quicksort(less), pivot, ...quicksort(greater)];
+  for (let i = 1; i < array.length; i++) {
+    if (array[i] <= pivot) less.push(array[i]);
+    else greater.push(array[i]);
   }
+    
+  return [...quicksort(less), pivot, ...quicksort(greater)];
 }
 
 console.log(quicksort([10, 5, 2, 3])); // [ 2, 3, 5, 10 ]
