--- a/4. 퀵 정렬.md
+++ b/4. 퀵 정렬.md
@@ -1,7 +1,111 @@
 # 퀵 정렬
 <br />
 
-### 반복문
+### 합계(재귀함수)
+```javascript
+function sum(arr) {
+  if (arr.length < 1) return 0;
+  
+  // const firstElement = arr[0];
+  // const nextArr = arr.filter((_, index) => index !== 0);
+  
+  const nextArr = []
+  for (let i = 1; i < arr.length; i++) {
+    nextArr.push(arr[i]);
+  }
+  
+  return arr[0] + sum(nextArr);
+}
+
+console.log(sum([1, 2, 3, 4])); // 10
+```
+
+<br />
+
+### 원소의 개수(재귀함수)
+```javascript
+function count(arr) {
+  if (arr.length < 1) return 0;
+  
+  // const nextArr = arr.filter((_, index) => index !== 0);
+  
+  const nextArr = []
+  for (let i = 1; i < arr.length; i++) {
+    nextArr.push(arr[i]);
+  }
+  
+  return 1 + count(nextArr);
+}
+
+console.log(count([1, 2, 3, 4])); // 4
+```
+
+<br />
+
+### 최대값(재귀함수) - me
+```javascript
+function max(arr) {
+  if (arr.length < 2) return arr[0];
+  
+  const pivot = arr[0];
+  const greater = [];
+  
+  for (let i = 1; i < arr.length; i++) {
+    if (arr[i] > pivot) greater.push(arr[i]);
+  }
+  
+  return greater.length === 0 ? pivot : max(greater);
+}
+
+console.log(max([3, 100, 2])); // 100
+```
+
+<br />
+
+### 최대값(재귀함수) - 책
+```javascript
+function max(arr) {
+  if (arr.length < 2) return arr[0];
+  else if (arr.length === 2) return arr[0] > arr[1] ? arr[0] : arr[1];
+  
+  // const nextArr = arr.filter((_, index) => index !== 0);
+  
+  const nextArr = []
+  for (let i = 1; i < arr.length; i++) {
+    nextArr.push(arr[i]);
+  }
+  
+  return arr[0] > max(nextArr) ? arr[0] : max(nextArr);
+}
+
+console.log(max([3, 100, 2]))
+```
+
+<br />
+
+### 이진 탐색(재귀함수)
+```javascript
+function binarySearch(arr, item, high, low = 0) {
+  if (low > high) return null;
+  
+  const mid = Math.floor((low + high) / 2);
+  const guess = arr[mid];
+
+  if (guess === item) return mid;
+  else if (guess > item) return binarySearch(arr, item, mid-1, low);
+  else return binarySearch(arr, item, high, mid+1);
+}
+
+const myArr = [1, 3, 5, 7, 9];
+const myHigh = myArr.length - 1;
+
+console.log(binarySearch(myArr, 9, myHigh)); // => 4
+console.log(binarySearch(myArr, 10, myHigh)); // => null
+```
+
+<br />
+
+### 퀵 정렬
 ```javascript
 function quicksort(array) {
   if (array.length < 2) return array;
